--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Run Tests
       run: |
             mkdir results
-            robot -d ./reports ./test_integration.robot
+            robot   ./test/test_integration.robot
     - name: Upload test results
       uses: actions/upload-artifact@v1
       if: always()
