--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,10 +27,9 @@ jobs:
     - name: Install libraries for robot
       run: |
           pip install -U pip
-          python -c "import RPA"
           pip install robotframework-excel==1.0.0b4
-          openpyxl==2.5.1
-          pip install robotframework-excel --upgrade
+          pip install selenium==4.9.1
+          rpaframework==24.1.2
           pip install -r requirements.txt
     - name: Run Tests
       run: |
