--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,8 +29,9 @@ jobs:
           pip install -U pip
           pip install robotframework-excel==1.0.0b4
           pip install selenium==4.9.1
-          rpaframework==24.1.2
-          pip install -r requirements.txt
+          pip install rpaframework==24.1.2
+          robotframework-Collections
+          pip install pip install -r requirements.txt
     - name: Run Tests
       run: |
             mkdir results
