--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
- 
-    robotframework-Collections
-    robotframework-ExcelLibrary
-    robotframework-SeleniumLibrary
-    robotframework-RPA.Excel.Files
+robotframework==6.1.1
+robotframework-Collections
+robotframework-ExcelLibrary
+robotframework-SeleniumLibrary
+robotframework-RPA.Excel.Files
+robotframework-excel==1.0.0b4
+selenium==4.9.1
+rpaframework==26.1.1
+robotframework-requests==0.9.5
