--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,12 +27,29 @@ jobs:
     - name: Install libraries for robot
       run: |
           pip install -U pip
-          pip install robotframework-excel==1.0.0b4
-          pip install selenium==4.9.1
-          pip install rpaframework==24.1.2
-          robotframework-Collections
-          pip install pip install -r requirements.txt
+          pip install -r requirements.txt
     - name: Run Tests
       run: |
             mkdir results
             robot -d ./reports ./robot_tests
+    - name: Upload test results
+      uses: actions/upload-artifact@v1
+      if: always()
+      with:
+        name: reports
+        path: reports
+        
+  generate_report:
+        if: always()
+        needs: [run_automation] 
+        runs-on: ubuntu-latest
+        steps:
+        - uses: actions/checkout@v2
+        - name: Download reports
+          uses: actions/download-artifact@v1
+          with:
+            name: reports
+        - name: Send report to commit
+          uses: joonvena/robotframework-reporter-action@v2
+          with:
+            gh_access_token: ${{ secrets.GITHUB_TOKEN }}
