--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Run Tests
       run: |
             mkdir results
-            robot -d ./reports ./test_integration
+            robot -d ./reports ./tests/test_integration.robot
     - name: Upload test results
       uses: actions/upload-artifact@v1
       if: always()
