--- a/.github/workflows/robot-pipeline.yml
+++ b/.github/workflows/robot-pipeline.yml
@@ -10,8 +10,11 @@ jobs:
     - name: Checkout do código
       uses: actions/checkout@v4
 
-    - name: Verificar versão do Python (já instalado no Ubuntu)
-      run: python3 --version
+    - name: Verificar estrutura do repositório
+      run: ls -R  # Lista todos os arquivos e pastas para debug
+
+    - name: Criar diretório de resultados
+      run: mkdir -p results
 
     - name: Configurar ambiente virtual e instalar dependências
       run: |
@@ -22,7 +25,6 @@ jobs:
 
     - name: Executar Testes
       run: |
-        mkdir -p results
         source venv/bin/activate
         robot -d ./results ./tests/test_integration.robot
 
