--- a/.github/workflows/robot-pipeline.yml
+++ b/.github/workflows/robot-pipeline.yml
@@ -33,7 +33,7 @@ jobs:
       if: always()
       with:
         name: results
-        path: results
+        path: test/results
 
   generate_report:
     if: always()
