--- a/.github/workflows/robot-pipeline.yml
+++ b/.github/workflows/robot-pipeline.yml
@@ -3,6 +3,11 @@ name: Teste com Robot Framework
 on: 
   workflow_dispatch
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+  
 jobs:
   run_automation:
     runs-on: ubuntu-latest
