--- a/.github/workflows/robot-pipeline.yml
+++ b/.github/workflows/robot-pipeline.yml
@@ -1,60 +1,64 @@
 name: Teste com Robot Framework
 
 on: 
-  workflow_dispatch
+  workflow_dispatch  # Permite executar manualmente
 
 permissions:
   contents: read
-  issues: write
   pull-requests: write
-  
+
 jobs:
   run_automation:
     runs-on: ubuntu-latest
+    
     steps:
+    # --- PASSO 1: PREPARAÇÃO ---
     - name: Checkout do código
       uses: actions/checkout@v4
 
-    - name: Verificar estrutura do repositório
-      run: ls -R  # Lista todos os arquivos e pastas para debug
+    - name: Verificar estrutura (debug)
+      run: ls -R 
 
-    - name: Criar diretório de resultados
-      run: mkdir -p results
-
-    - name: Configurar ambiente virtual e instalar dependências
+    - name: Limpar resultados anteriores
       run: |
-        python3 -m venv venv
-        source venv/bin/activate
-        pip install --upgrade pip
+        echo "🔄 Apagando resultados antigos..."
+        rm -rf test/results/* || true 
+
+    - name: Configurar Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+
+    - name: Instalar dependências
+      run: |
+        python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    - name: Criar pasta de resultados
+      run: mkdir -p test/results  
 
     - name: Executar Testes
       run: |
-        source venv/bin/activate
+        echo "🚀 Iniciando testes..."
         cd test/ && robot -d ./results ./test_integration.robot
 
-    - name: Upload dos Resultados dos Testes
+    - name: Upload dos Resultados
       uses: actions/upload-artifact@v4
-      if: always()
       with:
-        name: results
-        path: test/results
-
+        name: robot-results
+        path: test/results/*
+        if-no-files-found: error  
+        
   generate_report:
-    if: always()
-    needs: [run_automation] 
-    runs-on: ubuntu-latest
+    needs: [run_automation]
+    runs-on: ubuntu-latest 
     steps:
-    - name: Checkout do código
-      uses: actions/checkout@v4
-
-    - name: Baixar Resultados dos Testes
+    - name: Baixar resultados
       uses: actions/download-artifact@v4
       with:
-        name: results
-        path: reports
-
-    - name: Gerar e Enviar Relatório
-      uses: Gabriel/robotframework-reporter-action@v2
-      with:
-        gh_access_token: ${{ secrets.GITHUB_TOKEN }}
+        name: robot-results
+        path: results
+    - name: Exibir resumo (debug)
+      run: |
+        echo "📊 Relatório gerado em:"
+        ls -la results/
